2000-07-17  Bruno Haible  <haible@clisp.cons.org>

	* config.charset: Add support for FreeBSD. Improve support for HP-UX
	and IRIX 6.

2000-07-15  Jim Meyering  <meyering@lucent.com>

	* makepath.c: Include quote.h.
	(make_path): Convert "`%s'" in format strings to "%s", and wrap each
	corresponding argument in a `quote (...)' call.
	Give better diagnostics.

	* Makefile.am (libfetish_a_SOURCES): Add quote.c.
	(noinst_HEADERS): Add quote.h.

	* quote.c (quote, quote_n): New file.  Two functions taken verbatim
	from tar's src/misc.c.
	* quote.h: New file.  Prototypes for same.

2000-07-10  Paul Eggert  <eggert@twinsun.com>

	From a suggestion by Bruno Haible.
	* quotearg.c (mbrtowc): Do not use HAVE_WCHAR_H in the definition.
	Use defined mbstate_t, not HAVE_MBSTATE_T_OBJECT,
	to decide whether to define the BeOS workaround macro;
	this adjusts to the change to AC_MBSTATE_T.

2000-07-13  Paul Eggert  <eggert@twinsun.com>

	* quotearg.h (enum quoting style): New enum clocale_quoting_style.

	* quotearg.c: (quoting_style_args, quoting_style_vals,
	quotearg_buffer_restyled): Add support for
	clocale_quoting_style.  Undo previous change to
	locale_quoting_style behavior, and undo the "{LEFT QUOTATION MARK}"
	and "{RIGHT QUOTATION MARK}" msgids.

2000-07-05  Paul Eggert  <eggert@twinsun.com>

	The old behavior of quoting `like this' doesn't look good with
	newer, ISO-style fonts.  See:
	http://www.cl.cam.ac.uk/~mgk25/ucs/quotes.html

	Instead, quote "like this" by default.  Let the translator
	tailor the locale-specific quoting behavior by providing
	translations for {LEFT QUOTATION MARK} and {RIGHT QUOTATION MARK}.

	* quotearg.c (N_): New macro.
	(gettext_default): New function.
	(quotearg_buffer_restyled): Use
	gettext_default ("{LEFT QUOTATION MARK}", "\"") for left quote, and
	gettext_default ("{RIGHT QUOTATION MARK}", "\"") for right quote.

2000-07-09  Jim Meyering  <meyering@lucent.com>

	* Most files: Update copyright dates to include 2000.
