@@ -1,3 +1,8 @@
+2000-07-16  Bruno Haible  <haible@clisp.cons.org>
+
+        * mbswidth.m4: New file.
+        * prereq.m4 (jm_PREREQ): Call jm_PREREQ_MBSWIDTH.
+
 2000-07-14  Jim Meyering  <meyering@lucent.com>
 
 	* xstrtoumax.m4 (jm_AC_PREREQ_XSTRTOUMAX): Require jm_AC_TYPE_UINTMAX_T.
